# libtiff

./: .#README-ITPC  .appveyor.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  COPYRIGHT  ChangeLog  HOWTO-RELEASE  Makefile  Makefile.am  Makefile.in  Makefile.vc  README  README.md  SConstruct  TODO  autogen.sh  config.guess  config.site  configure  configure.ac  configure.com  mkinstalldirs  nmake.opt  tiff.h
CVS/: Entries  Repository
cmake/: AutotoolsVersion.cmake  CompilerChecks.cmake  DeflateCodec.cmake  FindWebP.cmake  JPEGCodec.cmake  PkgConfig.cmake  ProcessorChecks.cmake  Sphinx.cmake  WindowsIOFeature.cmake  WindowsSupport.cmake  ZSTDCodec.cmake  list-manpage-dependencies.py  list-manpages.py
contrib/: CMakeLists.txt  Makefile.am  Makefile.in
doc/: BigTIFFProposal.rst  CMakeLists.txt  HtmlDoc.cmake  Makefile.am  addingtags.rst  bigtiffdesign.rst  bigtiffpr.rst  bugs.rst  build.rst  conf.py  contrib.rst  document.rst  functions.rst  index.rst  internals.rst  intro.rst  libtiff.rst  manpages.rst  misc.rst  multi_page.rst  releases.rst  support.rst  tools.rst  v3.4beta016.rst  v3.5.5.rst  v3.5.7.rst  v3.6.0.rst  v3.7.4.rst  v4.0.9.rst
doc/functions/: TIFFClose.rst  TIFFCreateDirectory.rst  TIFFCustomDirectory.rst  TIFFDataWidth.rst  TIFFDeferStrileArrayWriting.rst  TIFFError.rst  TIFFFieldDataType.rst  TIFFFieldName.rst  TIFFFieldPassCount.rst  TIFFFieldQuery.rst  TIFFFieldReadCount.rst  TIFFFieldTag.rst  TIFFFieldWriteCount.rst  TIFFFlush.rst  TIFFGetField.rst  TIFFOpen.rst  TIFFOpenOptions.rst  TIFFPrintDirectory.rst  TIFFRGBAImage.rst  TIFFReadDirectory.rst  TIFFReadEncodedStrip.rst  TIFFReadEncodedTile.rst  TIFFReadFromUserBuffer.rst  TIFFReadRGBAImage.rst  TIFFReadRGBAStrip.rst  TIFFReadRGBATile.rst  TIFFReadRawStrip.rst  TIFFReadRawTile.rst  TIFFReadScanline.rst  TIFFReadTile.rst  TIFFSetDirectory.rst  TIFFSetField.rst  TIFFSetTagExtender.rst  TIFFStrileQuery.rst  TIFFWarning.rst  TIFFWriteDirectory.rst  TIFFWriteEncodedStrip.rst  TIFFWriteEncodedTile.rst  TIFFWriteRawStrip.rst  TIFFWriteRawTile.rst  (+12 more)
doc/project/: acknowledgements.rst  bugs.rst  index.rst  psc.rst
doc/releases/: index.rst  v3.5.6beta.rst  v3.6.1.rst  v3.7.1.rst  v3.7.2.rst  v3.7.3.rst  v3.8.2.rst  v3.9.0.rst  v3.9.3.rst  v3.9.5.rst  v4.0.4.rst  v4.0.4beta.rst  v4.0.5.rst  v4.0.7.rst  v4.0.8.rst  v4.1.0.rst  v4.5.0.rst  v4.5.1.rst  v4.7.0.rst
doc/rfcs/: rfc1_psc.rst  rfc2_restoring_needed_tools.rst
doc/specification/: bigtiff.rst  coverage-bigtiff.rst  coverage.rst  index.rst
doc/static/man/: TIFFClose.3tiff.html  TIFFDataWidth.3tiff.html  TIFFError.3tiff.html  TIFFFieldDataType.3tiff.html  TIFFFieldName.3tiff.html  TIFFFieldPassCount.3tiff.html  TIFFFieldReadCount.3tiff.html  TIFFFieldTag.3tiff.html  TIFFFieldWriteCount.3tiff.html  TIFFFlush.3tiff.html  TIFFGetField.3tiff.html  TIFFOpen.3tiff.html  TIFFPrintDirectory.3tiff.html  TIFFRGBAImage.3tiff.html  TIFFReadDirectory.3tiff.html  TIFFReadEncodedStrip.3tiff.html  TIFFReadEncodedTile.3tiff.html  TIFFReadRGBAImage.3tiff.html  TIFFReadRGBAStrip.3tiff.html  TIFFReadRGBATile.3tiff.html  TIFFReadRawStrip.3tiff.html  TIFFReadRawTile.3tiff.html  TIFFReadScanline.3tiff.html  TIFFReadTile.3tiff.html  TIFFSetDirectory.3tiff.html  TIFFSetField.3tiff.html  TIFFWarning.3tiff.html  TIFFWriteDirectory.3tiff.html  TIFFWriteEncodedStrip.3tiff.html  TIFFWriteEncodedTile.3tiff.html  TIFFWriteRawStrip.3tiff.html  TIFFWriteRawTile.3tiff.html  TIFFWriteScanline.3tiff.html  TIFFWriteTile.3tiff.html  TIFFbuffer.3tiff.html  TIFFcodec.3tiff.html  TIFFcolor.3tiff.html  TIFFmemory.3tiff.html  TIFFquery.3tiff.html  TIFFsize.3tiff.html  (+23 more)
doc/tools/: fax2ps.rst  fax2tiff.rst  pal2rgb.rst  ppm2tiff.rst  raw2tiff.rst  rgb2ycbcr.rst  thumbnail.rst  tiff2bw.rst  tiff2pdf.rst  tiff2ps.rst  tiff2rgba.rst  tiffcmp.rst  tiffcp.rst  tiffcrop.rst  tiffdump.rst  tiffgt.rst  tiffinfo.rst  tiffmedian.rst  tiffset.rst  tiffsplit.rst
html/: Makefile.am  Makefile.in  bugs.html  build.html  contrib.html  document.html  images.html  index.html  internals.html  intro.html  libtiff.html  misc.html  support.html  tools.html  v3.4beta007.html  v3.4beta016.html  v3.4beta018.html  v3.4beta024.html  v3.4beta028.html  v3.4beta029.html  v3.4beta031.html  v3.4beta032.html  v3.4beta033.html  v3.4beta034.html  v3.4beta035.html  v3.4beta036.html  v3.5.1.html  v3.5.2.html  v3.5.3.html  v3.5.4.html  v3.5.5.html  v3.5.6-beta.html  v3.5.6.html  v3.5.7.html  v3.5.html  v3.6.0.html  v3.6.1.html  v3.7.0.html  v3.7.0alpha.html  v3.7.0beta.html  (+20 more)
libtiff/: CMakeLists.txt  Makefile  Makefile.acorn  Makefile.am  Makefile.in  Makefile.lcc  Makefile.msc  Makefile.vc  SConstruct  libtiff.def  libtiff.map  mkg3states.c  mkspans.c  mkversion.c  t4.h  tif_acorn.c  tif_apple.c  tif_atari.c  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h-vms  tif_config.h.cmake.in  tif_config.h.in  tif_config.vc.h  tif_config.wince.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_flush.c  tif_getimage.c  (+49 more)
m4/: tiffmacros.m4
man/: Makefile  Makefile.am  Makefile.in  TIFFClose.3t  TIFFClose.3tiff  TIFFDataWidth.3t  TIFFDataWidth.3tiff  TIFFError.3t  TIFFError.3tiff  TIFFFlush.3t  TIFFFlush.3tiff  TIFFGetField.3t  TIFFGetField.3tiff  TIFFOpen.3t  TIFFOpen.3tiff  TIFFPrintDirectory.3t  TIFFRGBAImage.3t  TIFFRGBAImage.3tiff  TIFFReadDirectory.3t  TIFFReadDirectory.3tiff  TIFFReadEncodedStrip.3t  TIFFReadEncodedTile.3t  (+87 more)
tools/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.lcc  Makefile.vc  bmp2tiff.c  fax2ps.c  fax2tiff.c  gif2tiff.c  mkg3states.c  pal2rgb.c  ppm2tiff.c  ras2tiff.c  rasterfile.h  raw2tiff.c  rgb2ycbcr.c  sgi2tiff.c  sgigt.c  sgisv.c  thumbnail.c  tiff2bw.c  tiff2pdf.c  tiff2ps.c  tiff2rgba.c  tiffcmp.c  tiffcp.c  tiffcrop.c  tiffdither.c  tiffdump.c  tiffgt.c  tiffinfo.c  tiffinfoce.c  tiffmedian.c  tiffset.c  tiffsplit.c  ycbcr.c
tools/CVS/: Entries  Repository
tools/unsupported/: tif_tools-unsupported_versioninfo.rc
(+175 files in other folders)
